# learning-stuff

./: .gitignore  CMakeLists.txt  README.md
include/: shader.h  square.h
include/glad/: glad.h
shaders/: fShader.fs  vShader.vs
src/: glad.c  main.cpp  shader.cpp  square.cpp
